feat: add imdb tests and refactor